tests/typing/fail/constructor_precond/constructor_precond_fail8.act
contract A

constructor(uint x) payable
iff 
    CALLVALUE > 5
creates
    uint w := x
    uint BALANCE := CALLVALUE

contract B

constructor(address<A> x, address<A> y)
iff
    x != y
creates
    A a1 := x
    A a2 := y


contract C

constructor()
creates
    B b := new B(new A{value : 1}(11), new A{value : 12}(42))